--- a/src/App.css
+++ b/src/App.css
@@ -1,22 +1,52 @@
-.App {
+.app {
   text-align: center;
+  font-family: "Helvetica";
 }
 
-.App-logo {
-  height: 40vmin;
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.app-header {
+  background-color: #404859;
+  /*min-height: 100vh;*/
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  /*font-size: calc(10px + 2vmin);*/
   color: white;
 }
 
-.App-link {
-  color: #09d3ac;
+.header-container {
+	min-width: 630px;
+	margin: 0 auto;
+}
+
+.app-navigation-container {
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+}
+
+.app-header-navigation {
+	flex-basis: 20%;
+}
+
+ul { 
+	list-style-type: none;
+	padding: 0;
+	display: flex;
+	justify-content: space-between;
+}
+
+.app-header-navigation  a { 
+	color: #fff;
+	text-decoration: none;
+}
+
+.app-slide-info {
+
+}
+
+.main-container {
+	display: inline-block;
+	min-width: 1166px;
+	margin: 0 auto;
 }
